# ursa-abci-evm-example

./: Cargo.toml  README.md  committee.json
crates/ursa/: Cargo.toml
crates/ursa-application/: Cargo.toml
crates/ursa-application/src/: app.rs  config.rs  genesis.rs  lib.rs  server.rs  types.rs
crates/ursa-consensus/: Cargo.toml
crates/ursa-consensus-abci/: Cargo.toml
crates/ursa-consensus-abci/src/: config.rs
crates/ursa-consensus/src/: config.rs  engine.rs  lib.rs  server.rs
crates/ursa-network/src/: config.rs
crates/ursa/src/: config.rs  main.rs
crates/ursa/src/ursa/: identity.rs
