[package]
name = "ursa-consensus"
version = "0.1.0"
edition = "2021"
authors = ["b0xtch <mahmoud@fleek.co>"]

[dependencies]
anyhow.workspace = true
bincode.workspace = true
db.workspace = true
futures.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true


narwhal_primary = { package = "primary", git = "https://github.com/daltoncoder/narwhal/" }
narwhal_crypto = { package = "crypto", git = "https://github.com/daltoncoder/narwhal/" }

once_cell = "1.13.0"
tendermint-abci = { version = "0.23.7", features = ["client"] }
tendermint-proto = "0.23.7"
reqwest = "0.11.11"
yansi = "0.5.1"
serde_bytes = "0.11.8"